Add UI to gameplay

--- a/RootsGame/Config/DefaultEngine.ini
+++ b/RootsGame/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=RootsGame
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/PuzzleBP/Maps/PuzzleExampleMap
-GameDefaultMap=/Game/PuzzleBP/Maps/PuzzleExampleMap
+EditorStartupMap=/Game/PuzzleBP/Maps/StartLevel.StartLevel
+GameDefaultMap=/Game/PuzzleBP/Maps/StartLevel.StartLevel
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
